# CHRONOS

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
accessibility/src/cognitive/: adaptation.rs  complexity.rs  load.rs
accessibility/src/modality/: auditory.rs  representation.rs  tactile.rs
binding/src/: algorithm.rs  buffer.rs  data_structures.rs  execution.rs  lib.rs  temporal.rs
core/: Cargo.toml
core/src/algorithm/: mod.rs  state.rs  traits.rs
core/src/algorithm/graph/: centrality.rs  community.rs  isomorphism.rs  matching.rs  max_flow.rs  mod copy.rs  mst.rs  scc.rs
core/src/algorithm/path_finding/: arc_flags.rs  bidirectional.rs  contraction_hierarchies.rs  hub_labeling.rs  jps.rs  mld.rs  mod.rs  reach.rs  theta_stat.rs
core/src/data_structures/: graph.rs  priority_queue.rs
core/src/education/: adaptive_difficulty.rs  assessment.rs  collaborative.rs  conceptual_change.rs  exercise.rs  learning_path.rs  metacognitive.rs  orchestrator.rs  progressive.rs
core/src/execution/: history.rs
core/src/insights/: anomaly.rs  explanation.rs  pattern.rs  presentation.rs
core/src/insights/anomaly/: detection.rs
core/src/insights/explanation/: generation.rs
core/src/insights/patttern/: library.rs  recognition.rs
core/src/ml/: algorithm_selection.rs  anomaly_detection.rs  neural_heuristics.rs  performance_prediction.rs  rl_optimizer.rs
core/src/optimization/: memory.rs  parallel.rs
core/src/temporal/: branch.rs  causal_inference.rs  compression.rs  delta.rs  multi_branch.rs  prediction.rs  query_optimizer.rs  state_manager.rs  storage.rs  sync_protocol.rs  timeline.rs
core/src/validation/: benchmarks.rs  correctness.rs  integration.rs  performance.rs
docs/api/: index.md
docs/src/tutorials/: index.md
pathlab/: insight.py
pathlab/analytics/: learning.py  usage.py
pathlab/education/: learning_path.py  module.py
pathlab/integration/: export.py  jupyter.py  lms.py  lti.py  web.py
scripts/: configuration.py  packaging.py
visualization/src/advanced/: collaborative.rs  immersive.rs  lod.rs  procedural.rs  raytracing.rs
visualization/src/analysis/: convergence.rs  decision_manifolds.rs  information_flow.rs  trace_clustering.rs
visualization/src/engine/: platform.rs  shader.rs  wgpu.rs
visualization/src/perspective/: decision.rs  heuristic.rs  progress.rs  state_space.rs  synchronization.rs
visualization/src/view/: graph_view.rs  grid_view.rs  heatmap_view.rs  tree_view.rs
