[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "chronos"
version = "0.1.0"
description = "CHRONOS: Temporal Algorithmic Observatory - A hybrid Rust/Python framework for algorithm visualization, education, and temporal debugging"
readme = "README.md"
authors = [{name = "Mohammad Atashi", email = "mohammadaliatashi@icloud.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["algorithm", "visualization", "temporal", "debugging", "education", "rust", "python"]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
ui = [
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "maturin>=1.5,<2.0",
    "chronos[ui]",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.7.0",
    "mkdocs-jupyter>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/TensorScholar/chronos.git"
"Bug Tracker" = "https://github.com/TensorScholar/chronos.git/issues"
"Documentation" = "https://TensorScholar.github.io/chronos/"
"Source Code" = "https://github.com/TensorScholar/chronos.git"
"Changelog" = "https://github.com/TensorScholar/chronos.git/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "chronos"
features = ["pyo3/extension-module"]
module-name = "_core"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PYI", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
